# ros_gazebo_workshop

./: .gitignore  Dockerfile  compose.debugger.yaml  compose.rpi.yaml  compose.sim.yaml  compose.yaml
data/: my_map.pgm  my_map.yaml
data/project_ws/: build.sh  build2.sh  install_dep.sh
data/project_ws/src/bno080/: package.xml  setup.cfg  setup.py
data/project_ws/src/camera_process2/: package.xml  setup.cfg  setup.py
data/project_ws/src/camera_udp_publisher/: package.xml  setup.cfg  setup.py
data/project_ws/src/capture/: package.xml  setup.cfg  setup.py
data/project_ws/src/hardware_link2/: CMakeLists.txt  hardware_link2.xml
data/project_ws/src/map_process/: package.xml  setup.cfg  setup.py
data/project_ws/src/ros_gz_example_bringup/: package.xml
data/project_ws/src/ros_gz_example_bringup/config/: camera.yaml  diff_drive.rviz  diff_drive_controller_velocity.yaml  ekf.yaml  imu_filter.yaml  joy-params.yaml  mapper_params_online_async.yaml  nav2_params.yaml  nav2_params_rpi.yaml  nav2_params_sim.yaml  ps3.config.yaml  ros_gz_example_bridge.yaml  warehouse.pgm  warehouse.yaml
data/project_ws/src/ros_gz_example_bringup/launch/: diff_drive.launch.py
data/ws/: build.sh  my_map_save.pgm  my_map_save.yaml  my_map_ser.data
hardware_link2/: package.xml
hardware_link2/include/hardware_link2/: hardware_link2.hpp  visibility_control.h
hardware_link2/src/: hardware_link2.cpp
hardware_link2/test/: test_hardware_link2.cpp
my_package/: package.xml
my_package/my_package/: my_node.py
ros_gz_example_bringup/: package.xml
ros_gz_example_bringup/config/: diff_drive_controller_velocity.yaml  diff_drive_old.rviz  mapper_params_online_async.yaml  my_map2.pgm  my_map2.yaml
(+33 files in other folders)
