<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros_gz_example_bringup</name>
  <version>0.0.0</version>
  <description>Contains launch files for the ros_gz_example project</description>
  <maintainer email="michael@openrobotics.org">Michael Carroll</maintainer>
  <license>Apache 2.0</license>
  <author>Michael Carroll</author>
  <author>Dharini Dutia</author>

  <depend>ros_gz</depend>
  <depend>sdformat_urdf</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>slam_toolbox</depend>
  <depend>joy</depend>
  <depend>teleop_twist_joy</depend>
  <depend>navigation2</depend>
  <depend>nav2_bringup</depend>
  <depend>rplidar_ros</depend>

  <depend>usb_cam</depend>
  <depend>compressed_depth_image_transport</depend>
  <depend>compressed_image_transport</depend>
  <depend>image_transport_plugins</depend>
  <depend>theora_image_transport</depend>

  <depend>ros_gz_example_description</depend>
  <depend>ros_gz_example_gazebo</depend>

  <depend>hardware_interface</depend>
  <depend>ign_ros2_control</depend>
  
  <depend>imu_sensor_broadcaster</depend>
  <depend>joint_state_broadcaster</depend>
  <depend>velocity_controllers</depend>
  <depend>diff_drive_controller</depend>

  <depend>robot_localization</depend>
  <depend>imu_filter_madgwick</depend>
   	

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

